Change to Max10

--- a/hollywood_hash.qsf
+++ b/hollywood_hash.qsf
@@ -37,8 +37,8 @@
 # -------------------------------------------------------------------------- #
 
 
-set_global_assignment -name FAMILY "Cyclone V"
-set_global_assignment -name DEVICE 5CGXFC7C7F23C8
+set_global_assignment -name FAMILY "MAX 10"
+set_global_assignment -name DEVICE 10M08DAF484C8G
 set_global_assignment -name TOP_LEVEL_ENTITY hollywood_hash
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 16.0.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "17:59:59  AUGUST 13, 2016"
