--- a/hollywood_hash.qsf
+++ b/hollywood_hash.qsf
@@ -348,4 +348,5 @@ set_global_assignment -name VERILOG_FILE hollywood_hash/synthesis/hollywood_hash
 set_global_assignment -name SDC_FILE hollywood_hash.sdc
 
 set_global_assignment -name CDF_FILE output_files/Chain1.cdf
+set_global_assignment -name OPTIMIZATION_MODE "AGGRESSIVE PERFORMANCE"
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
